<resources>
    <string name="app_name">BootcampAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Inicio de Sesión</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="go_home">Ir a Home</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="setting_message">Settings Title</string>
    <string name="title_login">Inicio de Sesión</string>
    <string name="button_login">Ingresar</string>
    <string name="hint_user_login">User</string>
    <string name="hint_pass_login">Password</string>
    <string name="title_first_fragment">Primer Fragmento</string>
    <string name="goSecondFragment">Ir</string>
</resources>